<resources>
    <string name="app_name">Portfolio Generator</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_header_name">Portfolio Generator</string>
    <string name="button_start">Start</string>
    <string name="parameter_header_name">Portfolio Generator: Set up</string>
    <string name="parameter_input_money">Amount to Invest:</string>
    <string name="parameter_currency">$</string>
    <string name="parameter_button_generate">Generate</string>
    <string name="parameter_input_money_min">min: 100</string>
    <string name="parameter_input_year">Years to invest:</string>
    <string name="parameter_year">year(s)</string>
    <string name="parameter_risk">Risk Tolerance:</string>
    <string name="parameter_radiobutton_1">Low Risk</string>
    <string name="parameter_radiobutton_2">Medium Risk</string>
    <string name="parameter_radiobutton_3">High Risk</string>
    <string name="parameter_radiobutton_4">Critical Risk</string>
    <string name="loading_screen">Generating Portfolio …</string>
    <string name="portfolio_title">Stock list</string>
</resources>